tests/baselines/reference/parserIndexMemberDeclaration10.errors.txt
==== tests/cases/compiler/parserIndexMemberDeclaration10.ts (1 errors) ====
    class C {
       static static [x: string]: string;
       ~~~~~~
!!! parserIndexMemberDeclaration10.ts(2,4): error TS1055: Modifiers cannot appear here.
    }